--- a/C/CAdvanced/C高级/C高级.vcxproj
+++ b/C/CAdvanced/C高级/C高级.vcxproj
@@ -127,10 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="main.c" />
+    <ClCompile Include="变量和内存分布.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="笔记.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
