--- a/C/CAdvanced/C高级/C高级.vcxproj
+++ b/C/CAdvanced/C高级/C高级.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="main.c" />
     <ClCompile Include="变量和内存分布.c" />
+    <ClCompile Include="指针强化.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="笔记.txt" />
