--- a/C/CAdvanced/C高级/C高级.vcxproj
+++ b/C/CAdvanced/C高级/C高级.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="main.c" />
     <ClCompile Include="变量和内存分布.c" />
     <ClCompile Include="指针强化.c" />
+    <ClCompile Include="结构体和文件的高级用法.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="笔记.txt" />
