--- a/C/CAdvanced/C高级/C高级.vcxproj
+++ b/C/CAdvanced/C高级/C高级.vcxproj
@@ -131,11 +131,13 @@
     <ClCompile Include="变量和内存分布.c" />
     <ClCompile Include="指针强化.c" />
     <ClCompile Include="结构体和文件的高级用法.c" />
+    <ClCompile Include="链表和回调函数.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="笔记.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="linklist.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
