--- a/C/CAdvanced/C高级/C高级.vcxproj.filters
+++ b/C/CAdvanced/C高级/C高级.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="结构体和文件的高级用法.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="链表和回调函数.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="笔记.txt">
@@ -35,6 +38,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="linklist.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
